--- a/templates/update-redesign/base2.html
+++ b/templates/update-redesign/base2.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/css/govuk-frontend-4.2.0.min.css">
   <link rel="stylesheet" href="/css/govuk-frontend-ie8-4.2.0.min.css">
   <link rel="stylesheet" href="/css/gov.min.scss">
-  <link rel="stylesheet" href="/css/style.css">
+  <!--link rel="stylesheet" href="/css/style.css"-->
   <link rel="stylesheet" href="/css/custom.css">
   <link rel="stylesheet" href="/css/tree.css">
 
@@ -45,78 +45,61 @@
 </script>
 
 
+<header class="nhsuk-header" role="banner">
 
-<header class="nhsuk-header" id="nhs-global-header" role="banner">
-  <a class="nhsuk-skip-link" href="#main-content">Skip to main content</a>
-  <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only">
-      <a aria-label="DM+D browser homepage" class="nhsuk-header__link nhsuk-header__link--service" href="/">
-        <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" role="img" focusable="false"
-             viewBox="0 0 40 16" aria-labelledby="title">
-          <title id="title">NHS Logo</title>
-          <path class="nhsuk-logo__background" d="M0 0h40v16H0z"></path>
-          <path class="nhsuk-logo__text"
-                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
-          <image src="https://assets.nhs.uk/images/nhs-logo.png" alt="NHS Logo"
-                 xlink:href=""></image>
-        </svg>
-        <span class="nhsuk-u-visually-hidden"> - CDR Client</span>
-      </a>
-    </div>
-  </div>
-  <nav class="nhsuk-header__navigation" id="header-navigation"
-       role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
-    <div class="nhsuk-width-container">
-      <p class="nhsuk-header__navigation-title"><span id="label-navigation">Menu</span>
-        <button class="nhsuk-header__navigation-close" id="close-menu">
-          <svg class="nhsuk-icon nhsuk-icon__close" xmlns="http://www.w3.org/2000/svg"
-               viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-            <path
-                d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"></path>
-          </svg>
-          <span class="nhsuk-u-visually-hidden">Close menu</span>
-        </button>
-      </p>
-      <ul class="nhsuk-header__navigation-list">
-        <li class="nhsuk-header__navigation-item">
-          <a class="nhsuk-header__navigation-link" href="/">
+  <div class="nhsuk-header__container">
+    <div class="nhsuk-header__logo"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
+          <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
+    <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
+    <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
+  </svg>
+      </a>    </div></div>
+
+  <div class="nhsuk-navigation-container">
+    <nav class="nhsuk-navigation" id="header-navigation" role="navigation" aria-label="Primary navigation">
+      <ul class="nhsuk-header__navigation-list">                                                        
+        <li class="nhsuk-header__navigation-item app-header__navigation-item--current" aria-current="true">
+          <a class="nhsuk-header__navigation-link" href="#">
             Name search
           </a>
-        </li>
-        <li class="nhsuk-header__navigation-item">
+        </li><li class="nhsuk-header__navigation-item">
           <a class="nhsuk-header__navigation-link" href="#">
             Code lookup
           </a>
-        </li>
-        <li class="nhsuk-header__navigation-item">
+        </li><li class="nhsuk-header__navigation-item">
           <a class="nhsuk-header__navigation-link" href="#">
             Code maintenance
           </a>
-        </li>
-        <li class="nhsuk-header__navigation-item">
+        </li><li class="nhsuk-header__navigation-item">
           <a class="nhsuk-header__navigation-link" href="#">
             Insert
           </a>
-        </li>
-        <li class="nhsuk-header__navigation-item">
-          <a class="nhsuk-header__navigation-link" href="#">
+        </li><li class="nhsuk-header__navigation-item">
+          <a class="nhsuk-header__navigation-link" href="https://www.nhs.uk/pregnancy/">
             Submissions
           </a>
-        </li>
-        <li class="nhsuk-header__navigation-item">
-          <a class="nhsuk-header__navigation-link" href="/trade-families/tfg-table-view">
+        </li><li class="nhsuk-header__navigation-item">
+          <a class="nhsuk-header__navigation-link" href="https://www.nhs.uk/nhs-services/">
             Trade families
           </a>
-        </li>
-        <li class="nhsuk-header__navigation-item nhsuk-header__navigation-item--home">
+        </li><li class="nhsuk-header__navigation-item nhsuk-header__navigation-item--home">
           <a class="nhsuk-header__navigation-link" href="/">
             Home
           </a>
+        </li><li class="nhsuk-mobile-menu-container">
+          <button class="nhsuk-header__menu-toggle nhsuk-header__navigation-link" id="toggle-menu" aria-expanded="false">
+            <span class="nhsuk-u-visually-hidden">Browse</span>
+            More
+            <svg class="nhsuk-icon nhsuk-icon__chevron-down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"></path>
+            </svg>
+          </button>
         </li>
       </ul>
-    </div>
-  </nav>
+    </nav>
+  </div>
 </header>
+
 {% block breadcrumb %}{% endblock %}
 
 
