--- a/templates/update-redesign/index.html
+++ b/templates/update-redesign/index.html
@@ -1,8 +1,8 @@
-{% extends "tce-2465/base.html" %}
+{% extends "update-redesign/base.html" %}
 {% block content %}
 <div class="grid-row">
   <div class="column-two-thirds">
-    <h1 class="heading-xlarge">End Date Locations</h1>
+    <h1 class="heading-xlarge">Update Locations</h1>
 
     <ul>
 
