--- a/templates/update-redesign/amp-update-code.html
+++ b/templates/update-redesign/amp-update-code.html
@@ -1,13 +1,22 @@
-{% extends "tce-2465/base2.html" %}
+{% extends "update-redesign/base2.html" %}
 {% block content %}
 <div class="nhsuk-grid-row">
     <div id="content-pane" class="nhsuk-grid-column-full">
 
 
-        <span class="nhsuk-caption-l" id="update-codes-sub-heading">Update codes</span>
+       <div class="nhsuk-grid-column-three-quarters"> <span class="nhsuk-caption-l" id="update-codes-sub-heading">Update codes</span>
         <span class="nhsuk-u-visually-hidden"> - </span>
         <h1 class="nhsuk-heading-xl" id="update-codes-heading">A+E Medical Securing tape 2.5cm (Eurocare Impex Services
             Ltd)</h1>
+            </div>
+
+        <div class="nhsuk-grid-column-one-quarter" style="float: right;">
+            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+        </div>
+
 
 
         <form method="post">
@@ -22,14 +31,20 @@
 
 
                     <div class="nhsuk-grid-column-full update-box">
+                        <div class="update-general-heading">
+                            <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">PPA Code</h2>
+                            <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                                changes</a>
+
+
+                        </div>
 
                         <fieldset class="nhsuk-fieldset" aria-describedby="code-hint-generate"></fieldset>
 
 
 
 
-                        <legend id="code-0-legend-value" class="nhsuk-fieldset__legend--l update-general-heading">PPA
-                            Code</legend>
+
 
 
 
@@ -147,6 +162,7 @@
 
                         <!--EndDate-->
                         <div class="nhsuk-grid-column-one-quarter">
+
                             <div class="nhsuk-form-group">
                                 <legend id="code-0-end-date-legend" class="nhsuk-fieldset__legend--m">
                                     End Date
@@ -204,7 +220,7 @@
                                 </div>
 
                             </div>
-                            
+
                             <button class="nhsuk-button nhsuk-button--reverse" type="button"
                                 onclick="setLastDayOfPreviousMonth(this)">
                                 End Attribute
@@ -239,7 +255,7 @@
 
 
                     <button class="nhsuk-button nhsuk-button--primary submit-button" id="submit" name="_eventId_submit"
-                        type="submit">Continue
+                        type="submit">Preview changes
                     </button>
                 </div>
 
