--- a/templates/update-redesign/attribute-update-snomed-code.html
+++ b/templates/update-redesign/attribute-update-snomed-code.html
@@ -1,4 +1,4 @@
-{% extends "tce-2465/base2.html" %}
+{% extends "update-redesign/base2.html" %}
 {% block content %}
 <div class="nhsuk-grid-row">
     <div id="content-pane" class="nhsuk-grid-column-full">
@@ -8,11 +8,20 @@
                 value="9DTEllNZZ5dtZt2P0nA8WYtbvQoWziWwagyjBWF1euP4gZtSwQf9pmU9BaVAA7m9410IOLk_kGt39kOdW27HN1ZEQoaataNk"
                 type="hidden">
 
-
+<div class="nhsuk-grid-column-three-quarters">
             <span class="nhsuk-caption-l" id="update-attribute-snomed-code-heading-sub-heading">Update SNOMED
                 code</span>
             <span class="nhsuk-u-visually-hidden"> - </span>
             <h1 class="nhsuk-heading-xl" id="update-attribute-snomed-code-heading-heading">Aerosol generator</h1>
+            </div>
+
+               <div class="nhsuk-grid-column-one-quarter" style="float: right;">
+            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+        </div>
+
 
 
 
@@ -20,9 +29,15 @@
             <div class="nhsuk-grid-row">
                 <div class="nhsuk-grid-column-full">
                     <div class="nhsuk-grid-column-full update-box">
+                          <div class="update-general-heading">
+                    <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">SNOMED code</h2>
+                    <a href="#" class="nhsuk-link nhsuk-link--reverse nhsuk-button-float-right">Revert
+                        changes</a>
+
+
+                </div>
                         <fieldset class="nhsuk-fieldset" aria-describedby="update-snomed-code-hint" role="group">
-                            <legend id="code-legend-value" class="nhsuk-fieldset__legend--l update-general-heading">
-                                SNOMED code</legend>
+                           
 
                             <div class="nhsuk-grid-column-full">
                                 <div class="nhsuk-hint" id="update-snomed-code-hint">
@@ -208,7 +223,7 @@
                         </fieldset>
                     </div>
                     <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit"
-                        type="submit">Continue
+                        type="submit">Preview changes
                     </button>
                 </div>
             </div>
