--- a/templates/update-redesign/ing-update-snomed-code.html
+++ b/templates/update-redesign/ing-update-snomed-code.html
@@ -1,4 +1,4 @@
-{% extends "tce-2465/base2.html" %}
+{% extends "update-redesign/base2.html" %}
 {% block content %}
 <div class="nhsuk-grid-row">
     <div id="content-pane" class="nhsuk-grid-column-full">
