--- a/templates/base.html
+++ b/templates/base.html
@@ -91,26 +91,26 @@
 </div>
 
 <footer role="contentinfo">
-  <div class="nhsuk-footer" id="nhsuk-footer">
+  <div class="nhsuk-footer-container" id="nhsuk-footer">
     <div class="nhsuk-width-container">
       <h2 class="nhsuk-u-visually-hidden">Support links</h2>
       <ul class="nhsuk-footer__list">
-        <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link"
-                                               href="https://www.nhs.uk/Pages/nhs-sites.aspx">NHS
+        <li class="nhsuk-footer__list-item nhsuk-footer-default__list-item"><a class="nhsuk-footer__list-item-link"
+                                                                               href="https://www.nhs.uk/Pages/nhs-sites.aspx">NHS
           sites</a></li>
-        <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link"
-                                               href="https://www.nhs.uk/about-us">About us</a></li>
-        <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link"
-                                               href="https://www.nhs.uk/contact-us/">Contact us</a>
+        <li class="nhsuk-footer__list-item nhsuk-footer-default__list-item"><a class="nhsuk-footer__list-item-link"
+                                                                               href="https://www.nhs.uk/about-us">About us</a></li>
+        <li class="nhsuk-footer__list-item nhsuk-footer-default__list-item"><a class="nhsuk-footer__list-item-link"
+                                                                               href="https://www.nhs.uk/contact-us/">Contact us</a>
         </li>
-        <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link"
-                                               href="https://www.nhs.uk/about-us/sitemap/">Sitemap</a>
+        <li class="nhsuk-footer__list-item nhsuk-footer-default__list-item"><a class="nhsuk-footer__list-item-link"
+                                                                               href="https://www.nhs.uk/about-us/sitemap/">Sitemap</a>
         </li>
-        <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link"
-                                               href="https://www.nhs.uk/our-policies/">Our
+        <li class="nhsuk-footer__list-item nhsuk-footer-default__list-item"><a class="nhsuk-footer__list-item-link"
+                                                                               href="https://www.nhs.uk/our-policies/">Our
           policies</a></li>
-        <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link"
-                                               href="https://www.nhsbsa.nhs.uk/accessibility-statement-dictionary-medicines-and-devices-browser-dmd-browser">Accessibility</a>
+        <li class="nhsuk-footer__list-item nhsuk-footer-default__list-item"><a class="nhsuk-footer__list-item-link"
+                                                                               href="https://www.nhsbsa.nhs.uk/accessibility-statement-dictionary-medicines-and-devices-browser-dmd-browser">Accessibility</a>
         </li>
       </ul>
     </div>
