--- a/templates/user-designed-query/Save-query-confirmation.html
+++ b/templates/user-designed-query/Save-query-confirmation.html
@@ -13,9 +13,12 @@
 <!--<p id="next-steps">You will receive a response via email once we have-->
 <!--  reviewed your submission. It can take up to 2 weeks to accept the submission. The Meds team may be-->
 <!--  in contact with you through email to verify imagery or contents.</p>-->
-<p><a href="home-page.html"> Return
-  to home page  </a></p>
+<h2>Introduction</h2>
 
+<a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="home-page.html" id="submitButton">
+  Return
+  to home page
+</a>
 <script>console.log(localStorage);
 var getProductName = localStorage.getItem("product-name");
 var getAssocProductName = localStorage.getItem("associated-product-name");
