--- a/templates/user-designed-query/save-query-choose-category.html
+++ b/templates/user-designed-query/save-query-choose-category.html
@@ -27,110 +27,146 @@
 
 
     <!--Catagory:- the users can add a category from the list below, there would potentially be more than i have found to add to the dropdown -->
-    <div class="nhsuk-form-group nhsuk-u-margin-top-5">
-      <h2 class="nhsuk-label-wrapper">
-        <label class="nhsuk-label--l" for="example-1">
-          Category
-        </label>
-      </h2>
+<!--    <div class="nhsuk-form-group nhsuk-u-margin-top-5">-->
+<!--      <h2 class="nhsuk-label-wrapper">-->
+<!--        <label class="nhsuk-label&#45;&#45;l" for="example-1">-->
+<!--          Category-->
+<!--        </label>-->
+<!--      </h2>-->
 
-        <div class="nhsuk-radios">
-          <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-1" name="example" type="radio" value="yes">
-              <label class="nhsuk-label nhsuk-radios__label" for="example-1">
-                Cat A price check
-              </label>
-            </div>
+<!--        <div class="nhsuk-radios">-->
+<!--          <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">-->
+<!--            <div class="nhsuk-radios__item">-->
+<!--              <input class="nhsuk-radios__input" id="example-1" name="example" type="radio" value="yes">-->
+<!--              <label class="nhsuk-label nhsuk-radios__label" for="example-1">-->
+<!--                Cat A price check-->
+<!--              </label>-->
+<!--            </div>-->
 
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-2" name="example" type="radio" value="no">
-              <label class="nhsuk-label nhsuk-radios__label" for="example-2">
-                Part IX Price update
-              </label>
-            </div>
+<!--            <div class="nhsuk-radios__item">-->
+<!--              <input class="nhsuk-radios__input" id="example-2" name="example" type="radio" value="no">-->
+<!--              <label class="nhsuk-label nhsuk-radios__label" for="example-2">-->
+<!--                Part IX Price update-->
+<!--              </label>-->
+<!--            </div>-->
 
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-3" name="example" type="radio" value="no">
-              <label class="nhsuk-label nhsuk-radios__label" for="example-3">
-                Price concessions
-              </label>
-            </div>
+<!--            <div class="nhsuk-radios__item">-->
+<!--              <input class="nhsuk-radios__input" id="example-3" name="example" type="radio" value="no">-->
+<!--              <label class="nhsuk-label nhsuk-radios__label" for="example-3">-->
+<!--                Price concessions-->
+<!--              </label>-->
+<!--            </div>-->
 
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-4" name="example" type="radio" value="no">
-              <label class="nhsuk-label nhsuk-radios__label" for="example-4">
-                Thursday checks
-              </label>
-            </div>
+<!--            <div class="nhsuk-radios__item">-->
+<!--              <input class="nhsuk-radios__input" id="example-4" name="example" type="radio" value="no">-->
+<!--              <label class="nhsuk-label nhsuk-radios__label" for="example-4">-->
+<!--                Thursday checks-->
+<!--              </label>-->
+<!--            </div>-->
 
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">
-              <label class="nhsuk-label nhsuk-radios__label" for="example-5">
-                CDR
-              </label>
-            </div>
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-5">
-                  Price concessions
-                </label>
-              </div>
+<!--            <div class="nhsuk-radios__item">-->
+<!--              <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">-->
+<!--              <label class="nhsuk-label nhsuk-radios__label" for="example-5">-->
+<!--                CDR-->
+<!--              </label>-->
+<!--            </div>-->
+<!--              <div class="nhsuk-radios__item">-->
+<!--                <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">-->
+<!--                <label class="nhsuk-label nhsuk-radios__label" for="example-5">-->
+<!--                  Price concessions-->
+<!--                </label>-->
+<!--              </div>-->
 
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-5">
-                  R and R
-                </label>
-              </div>
+<!--              <div class="nhsuk-radios__item">-->
+<!--                <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">-->
+<!--                <label class="nhsuk-label nhsuk-radios__label" for="example-5">-->
+<!--                  R and R-->
+<!--                </label>-->
+<!--              </div>-->
 
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-5">
-                  Drug tariff
-                </label>
-              </div>
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">
-              <label class="nhsuk-label nhsuk-radios__label" for="example-5">
-                Other
-              </label>
-            </div>
-          </div>
-        </div>
-
+<!--              <div class="nhsuk-radios__item">-->
+<!--                <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">-->
+<!--                <label class="nhsuk-label nhsuk-radios__label" for="example-5">-->
+<!--                  Drug tariff-->
+<!--                </label>-->
+<!--              </div>-->
+<!--            <div class="nhsuk-radios__item">-->
+<!--              <input class="nhsuk-radios__input" id="example-5" name="example" type="radio" value="no">-->
+<!--              <label class="nhsuk-label nhsuk-radios__label" for="example-5">-->
+<!--                Other-->
+<!--              </label>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+    <div class="nhsuk-form-group">
+      <label class="nhsuk-label" for="search-box">
+        Choose a category to add to the query
+      </label>
+      <select class="nhsuk-select" id="select-1" name="search-box">
+        <option value="1"></option>
+        <option value="Cat A" >Cat A price checker.udq </option>
+        <option value="3" >no reimbursement price,udq</option>
+        <option value="4" >Part VIIIC prices.udq</option>
+        <option value="5" >Part VIIIC prices.udq</option>
+        <option value="6" >PCDD AMP Presentation class.udq</option>
+        <option value="7" >PCDD VMP Preparation class.udq</option>
+        <option value="8" >Pit type.udq</option>
+        <option value="9" >PPA code check.udq</option>
+        <option value="10" >Price field blank.udq</option>
+        <option value="11" >Price with no price available.udq</option>
+        <option value="12" >Reimbursement price at VMPP.udq</option>
+        <option value="13" >Reinstate reimbursement price.udq</option>
+        <option value="14" >SCDD AMP presentation class.udq</option>
+        <option value="15" >SCDD VMP preparation class.ud</option>
+        <option value="16" >Search for blank PPA codes at AMPP.udq</option>
+        <option value="17" >Special order with no DND.udq</option>
+        <option value="18" >VMP has abbrev name where VMP Prescribing status is not valid.udq</option>
+        <option value="19" >VMP name generic etc prescribing status valid.udq</option>
+        <option value="20" >VMP Preperation class changes.udq</option>
+        <option value="21" >VMPP riemb price dt equals 0.udq</option>
+        <option value="22" >Zero price + NHS ind.udq</option>
+        <option value="23" >Zero price with reimbursement price.udq</option>
+        <option value="24" >Zero reimbursement price.udq</option>
+      </select>
+    </div>
       </div>
-        </div>
 
 
 
 
 
-  <button id="submitButton" class="nhsuk-button">Continue</button>
+
+  <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="save-query-add-note.html" id="submitButton">Continue
+  </a>
 
 </div>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const button = document.getElementById("submitButton");
+</fieldset>
 
-      button.addEventListener("click", function () {
-        const selectedRadio = document.querySelector(".nhsuk-radios__input:checked");
+{% endblock %}
 
-        if (!selectedRadio) {
-          alert("Please select a category before continuing.");
-          return;
-        }
+  {% block scripts %}
+<!--  <script>-->
+<!--    document.addEventListener("DOMContentLoaded", function () {-->
+<!--      const button = document.getElementById("submitButton");-->
 
-        const labelText = selectedRadio.nextElementSibling.innerText.trim();
+<!--      button.addEventListener("click", function () {-->
+<!--        const selectedRadio = document.querySelector(".nhsuk-radios__input:checked");-->
 
-        if (labelText === "Other") {
-          window.location.href = "Add-other-category.html";
-        } else {
-          window.location.href = "save-query-add-note.html";
-        }
-      });
-    });
-  </script>
+<!--        if (!selectedRadio) {-->
+<!--          alert("Please select a category before continuing.");-->
+<!--          return;-->
+<!--        }-->
+
+<!--        const labelText = selectedRadio.nextElementSibling.innerText.trim();-->
+
+<!--        if (labelText === "Other") {-->
+<!--          window.location.href = "Add-other-category.html";-->
+<!--        } else {-->
+<!--          window.location.href = "save-query-add-note.html";-->
+<!--        }-->
+<!--      });-->
+<!--    });-->
+<!--  </script>-->
 
 
   {% endblock %}
