--- a/templates/user-designed-query/large-data-table.html
+++ b/templates/user-designed-query/large-data-table.html
@@ -831,9 +831,9 @@
   <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="summary-page-save-query.html">
     Save my query
   </a>
-
+<!--This is to take the user to a CSV file enabling the user to view the results and share the-->
   <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="#">
-   Download query
+   Download query results
   </button>
 
 
