--- a/templates/user-designed-query/save-query-summary.html
+++ b/templates/user-designed-query/save-query-summary.html
@@ -2,9 +2,11 @@ summar{% extends "base.html" %}
 {% block content %}
 <div class="nhsuk-back-link nhsuk-u-margin-bottom-6">
   <a class="nhsuk-back-link__link" href="save-query-add-note.html">
-    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 24 24"
          aria-hidden="true" height="24" width="24">
-      <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+      <path
+          d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
     </svg>
     <span id="back-link-text">Go back to add notes </span></a>
 </div>
@@ -16,17 +18,17 @@ summar{% extends "base.html" %}
                  Save user defined query
               <span class="nhsuk-u-visually-hidden"> - </span>
             </span>
-        Cat A price check
+        Saved query summary
       </h1>
     </legend>
 
     <div class="nhsuk-form-group">
-
-
-      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
-        <h2 class="nhsuk-fieldset__heading">User id/Cipher
+      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">
+        <h2 class="nhsuk-fieldset__heading nhsuk-u-margin-top-4">This query will be saved under
+          these headings
         </h2>
       </legend>
+
 
       <dl class="nhsuk-summary-list">
 
@@ -37,16 +39,12 @@ summar{% extends "base.html" %}
           <dd class="nhsuk-summary-list__value">
             JAHMO
           </dd>
-
+          <dd class="nhsuk-summary-list__value">
+            <a href="#"></a>
+          </dd>
         </div>
 
       </dl>
-
-      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
-        <h2 class="nhsuk-fieldset__heading">
-          Date Saved
-        </h2>
-      </legend>
 
       <dl class="nhsuk-summary-list">
 
@@ -57,15 +55,17 @@ summar{% extends "base.html" %}
           <dd class="nhsuk-summary-list__value">
             15 March 2021
           </dd>
-
+          <dd class="nhsuk-summary-list__value">
+            <a href="#"></a>
+          </dd>
         </div>
 
       </dl>
 
-      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
-        <h2 class="nhsuk-fieldset__heading">Share query
-        </h2>
-      </legend>
+      <!--      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend&#45;&#45;l">-->
+      <!--        <h2 class="nhsuk-fieldset__heading">Share query-->
+      <!--        </h2>-->
+      <!--      </legend>-->
 
       <dl class="nhsuk-summary-list">
 
@@ -76,7 +76,9 @@ summar{% extends "base.html" %}
           <dd class="nhsuk-summary-list__value">
             Share
           </dd>
-
+          <dd class="nhsuk-summary-list__value">
+            <a href="#">Edit</a>
+          </dd>
         </div>
 
       </dl>
@@ -110,7 +112,8 @@ summar{% extends "base.html" %}
             Start date
           </th>
           <th role="columnheader" class="" scope="col">
-            End date </th>
+            End date
+          </th>
         </tr>
         </thead>
         <tbody class="nhsuk-table__body">
@@ -191,9 +194,10 @@ summar{% extends "base.html" %}
         <H3>Note </H3>
         <ul>
           <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </li>
+          </li>
 
         </ul>
       </div>
@@ -201,8 +205,9 @@ summar{% extends "base.html" %}
 
   </fieldset>
 
-  <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="Save-query-confirmation.html" id="submitButton">
-    Save query
+  <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit"
+     href="Save-query-confirmation.html" id="submitButton">
+    Save query to library
   </a>
 
 </div>
