--- a/templates/user-designed-query/saved-udq-add-name.html
+++ b/templates/user-designed-query/saved-udq-add-name.html
@@ -29,8 +29,8 @@
   <select class="nhsuk-select" id="select-1" name="select-1">
     <option value="1"></option>
     <option value="2" >Cremb</option>
-    <option value="3" >Anoth</option>
-    <option value="3" >Sumon</option>
+    <option value="3" >Jahmo</option>
+    <option value="4" >Anoth</option>j
   </select>
 </div>
 
