--- a/templates/update-redesign/ing-update-current-name.html
+++ b/templates/update-redesign/ing-update-current-name.html
@@ -4,10 +4,18 @@
     <div id="content-pane" class="nhsuk-grid-column-full">
 
 
+        <div class="nhsuk-grid-column-three-quarters">
+            <span class="nhsuk-caption-l" id="update-name-sub-heading">Update current name</span>
+            <span class="nhsuk-u-visually-hidden"> - </span>
+            <h1 class="nhsuk-heading-xl" id="update-name-heading">Abacavir</h1>
+        </div>
 
-        <span class="nhsuk-caption-l" id="update-name-sub-heading">Update current name</span>
-        <span class="nhsuk-u-visually-hidden"> - </span>
-        <h1 class="nhsuk-heading-xl" id="update-name-heading">Abacavir</h1>
+        <div class="nhsuk-grid-column-one-quarter" style="float: right;">
+            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+        </div>
 
 
         <form method="post">
@@ -169,10 +177,10 @@
                                 </div>
 
                                 <button class="nhsuk-button nhsuk-button--reverse" type="button"
-                                onclick="setLastDayOfPreviousMonth(this)">
-                                End Attribute
-                            </button>
-                            
+                                    onclick="setLastDayOfPreviousMonth(this)">
+                                    End Attribute
+                                </button>
+
                             </div>
                         </fieldset>
                     </div>
